--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
     </head>
     <body>
 
-        <h1>AluraBooks</h1>
+       <header class="cabeçalho">
+            <span class="cabeçalho_menu-hamburger"></span>
+            <a href="#"><img src="img/Logo.svg" alt="Logo Da AluraBooks"></a>
+            <a href="#"><img src="img/Favoritos.svg" alt="Logo Da AluraBooks"></a>
+            <a href="#"><img src="img/Sacola.svg" alt="Logo Da AluraBooks"></a>
+            <a href="#"><img src="img/Usuario.svg" alt="Logo Da AluraBooks"></a>
+            
+       </header>
 
     </body>
 
