--- a/index.html
+++ b/index.html
@@ -14,7 +14,27 @@
        
        <header class="cabeçalho">
             <div class="container">
-               <span class="cabeçalho_menu-hamburger containen_imagem"></span>
+               <input type="checkbox" id="menu" class="container__botao">
+               <label for="menu">
+                  <span class="cabeçalho_menu-hamburger containen_imagem"></span>
+               </label>
+               <ul class="lista-menu">
+                  <li class="lista-menu_titulo">Categorias</li>
+                  <li class="lista-menu_item">
+                     <a href="#" class="lista-menu_link">Programação</a> 
+                  </li>
+                  <li class="lista-menu_item">
+                     <a href="#" class="lista-menu_link">Front-end</a> 
+                  </li>
+                  <li class="lista-menu_item">
+                     <a href="#" class="lita-menu_link">Intraentrutura</a> 
+                  </li>
+                  <li class="lista-menu_item">
+                     <a href="#" class="lista-menu_link">Business</a> 
+                  </li>
+                  <li class="lista-menu_item">
+                     <a href="#" class="lista-menu_link">Desing & ux</a> 
+                  </li>
                <a href="#"><img src="img/Logo.svg" alt="Logo Da AluraBooks" class="containen_imagem"></a>
             </div>
             <div class="container">
