--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
         <title>AluraBooks</title>
         <link rel="stylesheet" href="style.css"> 
         <link rel="stylesheet" href="reset.css"> 
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
         
     </head>
     <body>
@@ -44,7 +47,14 @@
             </div>
             
        </header>
+       <section class="bunner">
+         <h2 class="bunner__titulo">Já sabe por onde começar?</h2>
+         <p class="bunner__texto">Encontre em nossa estante o que precisa pra seu desenvolvimento!</p>
+         <input type="search" class="bunner__pesquisa" placeholder="Qual erá sua próxima leitura?">
+   
+       </section>
 
     </body>
 
 </html>
+
