--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <head>
 
         <meta charset="UTF-8">
-        <meta name="viewport" content="width-device-width" initial-scale="1.0">
+        <meta name="viewport" content="width-device-width, initial-scale=1.0">
         <title>AluraBooks</title>
-        <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="reset.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="style.css">
 
     </head>
     <body>
@@ -52,6 +52,10 @@
                 <h2 class="banner__titulo">Já sabe por onde começar?</h2>
                 <p class="banner__texto">Encontre em nossa estante o que precisa para seu desenvolvimento!</p>
                 <input type="search" class="banner__pesquisa" placeholder="Qual será sua próxima leitura?">
+        </section>
+
+        <section class="carrossel">
+            <h2 class="carrossel__titulo">Últimos Lançamentos</h2>
         </section>
 
     </body>
