--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"/>
         <link rel="stylesheet" href="style.css">
 
     </head>
@@ -56,8 +57,39 @@
 
         <section class="carrossel">
             <h2 class="carrossel__titulo">Últimos Lançamentos</h2>
+            <!-- Slider main container -->
+<div class="swiper">
+    <!-- Additional required wrapper -->
+    <div class="swiper-wrapper">
+      <!-- Slides -->
+      <div class="swiper-slide"><img src="img/ApacheKafka.svg" alt="Livro sobre apache kafta da alura books"></div>
+      <div class="swiper-slide"><img src="img/Arquitetura.svg" alt="Livro sobre arquitetura da alura books"></div>
+      <div class="swiper-slide"><img src="img/Construct2.svg" alt="Livro sobra construct da alura books"></div>
+      <div class="swiper-slide"><img src="img/Liderança.svg" alt="Livro sobre liderança da alura books"></div>
+      <div class="swiper-slide"><img src="img/MetricasAgeis.svg" alt="Livro sobre métricas da alura books"></div>
+      <div class="swiper-slide"><img src="img/Javascript.svg" alt="Livro sobre javascript da alura books"></div>
+      <div class="swiper-slide"><img src="img/UX.svg" alt="Livro completo da alura books"></div>
+      ...
+    </div>
+    <!-- If we need pagination -->
+    <div class="swiper-pagination"></div>
+  
+    <!-- If we need navigation buttons -->
+    <div class="swiper-button-prev"></div>
+    <div class="swiper-button-next"></div>
+  
+    <!-- If we need scrollbar -->
+    <div class="swiper-scrollbar"></div>
+  </div>
         </section>
 
+        <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+        <script>
+            const swiper = new Swiper('.swiper', {
+                 spaceBetween: 10,
+                 slidesPerView: 3,
+            });
+        </script>
     </body>
 
 </html>
